prevent links frow wrapping

--- a/app/assets/stylesheets/blocks/b-options-floated.sass
+++ b/app/assets/stylesheets/blocks/b-options-floated.sass
@@ -35,6 +35,7 @@
     +dash_separated
     cursor: pointer
     display: inline
+    white-space: nowrap
 
     span.brackets
       +brackets_surrounded
